# 360-application

./: clock_overlay  example.c  gst_version_check  gstreamer_opencv.cpp  helloworld  helloworld.c  package-lock.json  test.sh
.github/workflows/: main  main.yml
main-application/: clock_overlay.cpp  meson.build
main-application/src/: main.cpp
src/: main.cpp
webapp/: .gitattributes  package-lock.json  package.json
webapp/src/: App.jsx  index.css  main.jsx  output.css
webapp/src/components/: Footer.jsx  Header.jsx  Layout.jsx  VideoCard.jsx
webapp/src/components/app_bar/: appbar.js
webapp/src/pages/: home.jsx  video.jsx
